my subscription alignment fixes

--- a/stylesheets/modules/my-account/myaccount-subcription.less
+++ b/stylesheets/modules/my-account/myaccount-subcription.less
@@ -152,13 +152,14 @@
 					border-bottom: 0.5px solid #cfcfcf;
 					.address-container{
 						float: left;
-						width: 70%;
+						width: 75%;
 						vertical-align: top;
+						border-right:1px solid #cfcfcf;
 						.billing-section{
 							display: inline-block;
 							width: 45%;
 							.billing-address{
-								margin-bottom: 20px;
+								margin-bottom: 30px;
 								label{
 									font-size: 21px;
 									font-weight: bold;
@@ -202,7 +203,7 @@
 							width: 45%;
 							vertical-align: top;
 							.shipping-info{
-								margin-bottom: 20px;
+								margin-bottom: 30px;
 								label{
 									font-size: 21px;
 									font-weight: bold;
@@ -244,11 +245,10 @@
 					}	
 					.subscription-actions{
 						float: right;
-						width: 28%;
+						width: 24%;
 						text-align: right;
-						border-left: 1px solid #cfcfcf;
 						.button-container{
-							text-align: right;
+							text-align: center;
 							button{
 								margin-bottom: 10px;
 								font-size: 16px;
@@ -498,7 +498,7 @@
 					.subscription-sub-total{
 						text-align: right;
 						padding: 18px 3.5% 18px 0;
-						width: 40%;
+						width: 41.5%;
 						float: right;
 						.total-details{
 							label{
